[project]
name = "ml4ps"
version = "0.0.1"
authors = [
    {name = "Balthazar Donon", email = "balthazar.donon@uliege.be"},
    {name = "Laurent Pagnier", email = "laurentpagnier@math.arizona.edu"},
]
description = "A toolkit to facilitate the application of Machine Learning techniques for Power Systems applications"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = []

dependencies = [
    "jax>=0.3.13",
    "jaxlib>=0.3.13",
    "numpy>=1.21.1",
    "scipy>=1.4.1",
    "pandapower>=2.9.0",
    "torch>=1.12.1",
    "nbsphinx>=0.8.9",
    "ipykernel>=6.15.1",
    "jupyter>=1.0.0",
    "notebook>=6.4.12",
    "zenodo_get>=1.3.4",
    "matplotlib>=3.5.3"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
myModule = ["*.json"]

[tool.setuptools.packages.find]
where = [""]
include = ["ml4ps.backend.pandapower_data_structure.json"]
exclude = ["venv", "doc"]
namespaces = false

[project.urls]
"Homepage" = "https://github.com/bdonon/ml4ps"
"Bug Tracker" = "https://github.com/bdonon/ml4ps/issues"
